[package]
name = "web"
version = "0.1.0"
authors = ["Stephen Karger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1.1"
actix-web-middleware-redirect-https = "0.1.1"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
handlebars = "3.0.0-beta.1"
listenfd = "0.3.3"
serde = "1.0.103"
serde_json = "1.0.41"
