[package]
name = "web-server"
version = "0.1.0"
authors = ["Stephen Karger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0"
actix-web = "2.0.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.1"
handlebars = "3.0.0-beta.1"
listenfd = "0.3.3"
log = "0.4.0"
serde = "1.0.103"
serde_json = "1.0.41"
