[package]
name = "web-server"
version = "0.1.0"
authors = ["Stephen Karger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.1"
handlebars = "3.5.3"
log = "0.4.0"
serde = "1.0.103"
serde_json = "1.0.41"
